<resources>
    <string name="app_name">My Application</string>
    <string name="name">NAME</string>
    <string name="id">ID</string>
    <string name="AMOUNT" />
    <string name="Amount">AMOUNT</string>
    <string name="add">ADD</string>
    <string name="read">READ</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="list">List</string>
</resources>
