<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ORDER ID"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CUSTOMER NAME"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AMOUNT"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Amount"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:padding="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="109dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/null"
            android:onClick="btn_click"
            android:text="@string/add"
            android:textSize="20dp" />

        <Button
            android:id="@+id/read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn_click"
            android:text="@string/read"
            android:textSize="20dp" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn_click"
            android:text="@string/update"
            android:textSize="20dp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn_click"
            android:text="@string/delete"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/list"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </LinearLayout>

</RelativeLayout>